<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">



        <!--        without fillViewport constraint layout will not work-->


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:nestedScrollingEnabled="true">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/homeGuideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/homeGuideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/homeGuideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="10dp" />

            <EditText
                android:id="@+id/homeSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/search_bg"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="@string/search_here"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cartIcon"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toTopOf="@+id/homeGuideline3"
                app:layout_constraintVertical_bias="0.008" />

            <ImageView
                android:id="@+id/cartIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/cart_bg"
                android:minWidth="48dp"

                android:minHeight="48dp"
                android:padding="8dp"
                android:src="@drawable/ic_cart"
                app:layout_constraintBottom_toBottomOf="@+id/homeSearch"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toTopOf="@+id/homeSearch" />

            <ImageView
                android:id="@+id/redDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/red_dot"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="@+id/cartIcon"
                app:layout_constraintStart_toEndOf="@+id/cartIcon"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="29dp" />

            <TextView
                android:id="@+id/cartItemsNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/redDot"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintStart_toStartOf="@+id/redDot"
                app:layout_constraintTop_toTopOf="@+id/redDot" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightGrey"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toBottomOf="@id/homeSearch"
                app:layout_constraintVertical_bias="0.0">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/homeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iss_auto_cycle="true"
                    app:iss_delay="2000"
                    app:iss_period="1000" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/categoriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/categories"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0" />


            <LinearLayout
                android:id="@+id/linearLayoutCategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoriesText"
                app:layout_constraintVertical_bias="0.0">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/categoriesProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCategories"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toTopOf="@+id/linearLayoutCategories" />

            <TextView
                android:id="@+id/popularProductsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/popular_products"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCategories"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/seeallPopularProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textColor="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/popularProductsText"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/popularProductsText"
                app:layout_constraintTop_toTopOf="@+id/popularProductsText" />

            <LinearLayout
                android:id="@+id/linearLayoutPopularProducts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="190dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/homeGuideline2"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toBottomOf="@+id/popularProductsText"
                app:layout_constraintVertical_bias="0.0">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularProductsRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/popularProdProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"

                app:layout_constraintBottom_toBottomOf="@id/linearLayoutPopularProducts"
                app:layout_constraintEnd_toEndOf="@id/homeGuideline2"
                app:layout_constraintStart_toStartOf="@id/homeGuideline1"
                app:layout_constraintTop_toTopOf="@id/linearLayoutPopularProducts" />

            <TextView
                android:id="@+id/topRatedProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/top_rated_products"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/homeGuideline2"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/homeGuideline1"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutPopularProducts"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/seeallTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textColor="@color/green"
                app:layout_constraintEnd_toStartOf="@+id/homeGuideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/topRatedProducts"
                app:layout_constraintTop_toTopOf="@+id/topRatedProducts" />

            <LinearLayout
                android:id="@+id/topRatedLinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="190dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/homeGuideline2"
                app:layout_constraintStart_toStartOf="@id/homeGuideline1"
                app:layout_constraintTop_toBottomOf="@id/topRatedProducts">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topRatedRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/topRProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/topRatedLinearLayout"
                app:layout_constraintEnd_toEndOf="@id/homeGuideline2"
                app:layout_constraintStart_toStartOf="@id/homeGuideline1"
                app:layout_constraintTop_toTopOf="@+id/topRatedLinearLayout" />

            />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>